7003554: (tiered) assert(is_null_object() || handle() != NULL) failed: cannot embed null pointer

C1 with profiling doesn't check whether the MDO has been really allocated, which can silently fail if the perm gen is full. The solution is to check if the allocation failed and bailout out of inlining or compilation.

Reviewed-by: kvn, never